--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-feature android:name="android.hardware.camera"
+
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="false" />
-
-
 
     <application
         android:allowBackup="true"
@@ -15,10 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SkinApp"
-
-        >
-
+        android:theme="@style/Theme.SkinApp">
+        <activity android:name=".Activity2"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,18 +25,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:configChanges="orientation" android:screenOrientation="portrait"
-            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"/>
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
 
         <provider
-
-            android:authorities="com.example.skinapp.fileprovider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.skinapp.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
-            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-
         </provider>
     </application>
 
