--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,16 @@
         android:required="false" />
 
     <application
-
         android:allowBackup="true"
-        android:icon="@drawable/sample"
+        android:icon="@drawable/imagem1"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SkinApp">
-        <activity android:name=".Activity2"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".history"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Activity2" />
+        <activity android:name=".MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,6 +40,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
     </application>
 
 </manifest>
